prevent page breaks inside elements

--- a/src/styles/editorComponent.sass
+++ b/src/styles/editorComponent.sass
@@ -5,6 +5,7 @@
 	position: relative
 	display: flex
 	align-items: center
+	page-break-inside: avoid
 
 	$itemContentHoverColor: #EEEEFF
 	.itemContent:hover
